--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -289,6 +289,9 @@ services:
         - "${PMA_DB_ENGINE}"
       volumes:
         - ./docker/phpmyadmin/themes/metro/:/var/www/html/themes/metro/
+      #  - ./docker/phpmyadmin/themes/metro/:/etc/phpmyadmin/themes/metro/
+      #  - ./docker/phpmyadmin/themes/metro/:/www/themes/metro/
+      #  - ./docker/phpmyadmin/themes/metro/:/var/www/html/themes/metro/
       networks:
         - frontend
         - backend
