--- a/docker/php-fpm/php.ini
+++ b/docker/php-fpm/php.ini
@@ -910,7 +910,7 @@ default_socket_timeout = 3600
 ; See http://www.php.net/manual/en/snmp.installation.php
 ;extension=snmp
 
-;extension=soap
+extension=soap
 ;extension=sockets
 ;extension=sqlite3
 ;extension=tidy
